--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "classname": "0.0.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
