react-bootstrap conflict with proxy redirect, switch to materialize-css.

--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
   },
   "dependencies": {
     "classname": "0.0.0",
+    "cookie-session": "^2.0.0-beta.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "materialize-css": "^0.100.2",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
