--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "classname": "0.0.0",
-    "cookie-session": "^2.0.0-beta.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
