--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.4.0",
     "materialize-css": "^0.100.2",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
