--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "react-scripts": "^1.0.11",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
