--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,24 @@
     }
   },
   "devDependencies": {
-    "enzyme": "^2.9.1",
-    "react-test-renderer": "^15.6.1"
+    "enzyme": "^3.3.0",
+    "react-test-renderer": "^16.2.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^4.14.0",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0" 
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.18.0",
     "classname": "0.0.0",
-    "eslint": "^4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
     "materialize-css": "^0.100.2",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "^1.0.11",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.1.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
