added Payment component.

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,1 +1,3 @@
-REACT_APP_STRIPE_KEY = pk_test_9pHl6UwONT42AgEF92ymUZY6;
+//this is public key
+REACT_APP_STRIPE_KEY = pk_test_9pHl6UwONT42AgEF92ymUZY6
+
