--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,12 @@
     "eslint": "^4.14.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0" 
+    "eslint-plugin-react": "^7.1.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "classname": "0.0.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
