--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
 node_js:
- - "node"
+ - "8"
+dist: trusty
+services:
+  - mongodb
+  - redis-server
+env:
+  - NODE_ENV=ci
+cache:
+  directories:
+    - node_modules
+    - client/node_modules
+install: 
+  - npm install
