--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,8 @@ cache:
     - client/node_modules
 install: 
   - npm install
+  - npm run build
+script: 
+  - nohup npm run start &
+  - sleep 3
+  - npm run test
