--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "server": "nodemon index.js --ignore tests",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "jest e2etests"
+    "test": "jest e2etests",
+    "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
