tried to fix the error of 'failed to launch chrome' in Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ cache:
 install: 
   - npm install
   - npm run build
+sudo: required
+addons: 
+  chrome: stable
 script: 
   - nohup npm run start &
   - sleep 3
