--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
  - "8"
 dist: trusty
+sudo: required
+addons:
+  chrome: stable
 services:
   - mongodb
   - redis-server
