--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.229.1",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
@@ -32,6 +33,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "puppeteer": "^1.2.0",
-    "stripe": "^5.5.0"
+    "stripe": "^5.5.0",
+    "uuid": "^3.2.1"
   }
 }
